[package]
name = "mentorust"
version = "0.1.0"
authors = ["fuqiuluo"]
edition = "2021"

[dependencies]
pcap = { version = "2.2.0" }
log = { version = "0.4.22", features = [] }
env_logger = { version = "0.11.5" }
clap_derive = { version = "4.5.13" }
clap = { version = "4.5.17", features = ["derive"] }
pnet = { version = "0.35.0", features = ["std"] }
hex = { version = "0.4.3"}
bytes = { version = "1.7.1" }
md5 = { version = "0.7.0" }
encoding_rs = { version = "0.8.34" }
windows = { version = "0.58.0", optional = true, features = ["Win32_AI", "Win32_System_AddressBook", "Win32_UI_Accessibility", "Win32", "Win32_System_Threading", "Win32_UI_WindowsAndMessaging", "Win32_System_Console", "Win32_Security"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58.0", features = ["Win32_AI", "Win32_System_AddressBook", "Win32_UI_Accessibility", "Win32", "Win32_System_Threading", "Win32_UI_WindowsAndMessaging", "Win32_System_Console", "Win32_Security"] }

[patch.crates-io]
pcap = { path = "pcap" }

[profile.release]
debug = false
lto = true
panic = 'abort'
opt-level = 'z'
strip = true
overflow-checks = false
codegen-units = 1